# another-dunkan-engine

./: .gitignore  CMakeLists.txt  README.md  build_log.txt  clean_compile.sh  cmake_output.txt  compile.sh  compile_run.sh
Quark/: CMakeLists.txt
Quark/src/: main.cpp
docs/: Entity-Component-System.md  SlotMap.md  Templates.md
dunkan/: .gitignore  CMakeLists.txt  build_log.txt  build_output.txt
dunkan/include/app/: ApplicationConfig.hpp  Camera.hpp  DebugUI.hpp  GizmoManager.hpp  LightingManager.hpp
dunkan/include/ecs/: entitymanager.hpp
dunkan/include/ecs/components/: componentstorage.hpp  traits.hpp
dunkan/include/ecs/utils/: Mathematics.hpp  memoryviewer.hpp  slotmap.hpp  typelist.hpp
dunkan/include/engine/: engine.hpp  entitymanager.hpp
dunkan/include/engine/assets/: assetmanager.hpp
dunkan/include/engine/components/: componentstorage.hpp  traits.hpp
dunkan/include/game/: imguiconfig.hpp  lightingsystem.hpp  types.hpp
dunkan/include/game/components/: cameracomponent.hpp  configurationcomponent.hpp  drawablecomponent.hpp  inputcomponent.hpp  levelinfocomponent.hpp  lightcomponent.hpp  namecomponent.hpp  physicscomponent.hpp  rendercomponent.hpp  shadowcomponent.hpp  transformablecomponent.hpp
dunkan/include/game/systems/: camerasystem.hpp  debugsystem.hpp  inputsystem.hpp  lightsystem.hpp  moveentitysystem.hpp  physicssystem.hpp  rendersystem.hpp  shadowsystem.hpp
dunkan/include/sfml/: AssetManager.hpp  TextureModifier.hpp
dunkan/include/utils/: Configuration.hpp
dunkan/include/vulkan/: VulkanBuffer.hpp  VulkanContext.hpp  VulkanDescriptorManager.hpp  VulkanGBuffer.hpp  VulkanImage.hpp  VulkanPipeline.hpp  VulkanRenderPass.hpp  VulkanRenderSystem.hpp  VulkanResourceManager.hpp  VulkanSSAO.hpp  VulkanSwapchain.hpp  VulkanTypes.hpp
dunkan/src/: VulkanBuffer.cpp  VulkanContext.cpp  VulkanDescriptorManager.cpp  VulkanGBuffer.cpp  VulkanImage.cpp  VulkanPipeline.cpp  VulkanRenderPass.cpp  VulkanRenderSystem.cpp  VulkanResourceManager.cpp  VulkanSSAO.cpp  VulkanSwapchain.cpp  engine.cpp  main.cpp
dunkan/src/app/: Camera.cpp  DebugUI.cpp  GizmoManager.cpp  LightingManager.cpp
dunkan/src/game/systems/: physicssystem.cpp  rendersystem.cpp
quark/: CMakeLists.txt  CMakeLists.txt.in
quark/include/: componentstorage.hpp  engine.hpp  entity.hpp  entitymanager.hpp  game.hpp  memoryviewer.hpp  physicssystem.hpp  pyshicscomponent.hpp  rendercomponent.hpp  rendersystem.hpp  slotmap.hpp
quark/include/engine/: engine.hpp  entity.hpp  entitymanager.hpp
quark/include/engine/components/: componentstorage.hpp  traits.hpp
quark/include/engine/utils/: memoryviewer.hpp  slotmap.hpp  typelist.hpp
quark/include/game/: types.hpp
quark/src/: engine.cpp  entity.cpp  entitymanager.cpp  main.cpp  physicssystem.cpp  rendersystem.cpp
shaders/: color.frag  composite.frag  composite.vert  default.vert  depth.frag  light.frag  normal.frag  pbr.frag  ssao.frag
